<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Doble Embrague</string>
	<string name="dobleembrague">Doble Embrague</string>
	<string name="menu_actualizar">Refresh</string>
	<string name="menu_visitar">Doble Embrague</string>
	<string name="menu_mas">More</string>

	<string name="menu_sugerencias">Suggestions</string>
	<string name="menu_acerca">About</string>
	<string name="menu_salir">Exit</string>
	<string name="menu_compartir">Share</string>
	<string name="menu_preferencias">Preferences</string>

	<string name="menu_web">Web</string>
	<string name="menu_facebook">Facebook</string>
	<string name="menu_twitter">Twitter</string>
	<string name="menu_youtube">Youtube</string>

	<string name="activity_RSSItemDisplayer">Article view</string>
	<string name="activity_Preferencias">Preferences</string>
	<string name="activity_Acerca">About</string>
	<string name="categoria_aplicacion">Application</string>
	<string name="categoria_autor">Developer</string>
	<string name="TitVersion">Version</string>
	<string name="Version">1.4</string>
	<string name="TitAutor">Developer</string>
	<string name="Autor">David García G.</string>
	<string name="Web">Web: http://www.davidgg.es</string>
	<string name="Twitter">Twitter: http://twitter.com/deibiz</string>
	<string name="TitMarket">More Apps</string>
	<string name="BotonOK">OK</string>
	<string name="menu_visitar_articulo">View in the browser</string>

	<string name="ButtonCategorias">Categories</string>
	<string name="ButtonUltimas">Latest</string>

	<string name="CatCoches">Cars</string>
	<string name="CatClasicos">Classic</string>
	<string name="CatCompeticion">Competition</string>
	<string name="CatVideojuegos">Games</string>
	<string name="CatMotos">Bikes</string>
	<string name="CatOtros">Other</string>
	<string name="CatInformacionTecnica">Technical</string>

	<string name="widget_name">Doble Embrague</string>

	<string name="adapterCreador">By </string>
	<string name="noticiasConex">Connection with dobleembrague.es failed</string>
	<string name="noticiasConexb">Check your connection</string>
	<string name="noticiasRefresh">Articles Updated</string>
	<string name="noticiasCompartir">Article on dobleembrague.es</string>
	<string name="noticiasCompartirb">as seen on</string>
	<string name="noticiasSugerencia">Doble Embrague Application</string>
	<string name="noticiasSugerenciab">Insert your suggets</string>
	<string name="noticiasSugerenciac">Sending e-mail</string>
	<string name="noticiasOpcionesArticulo">Options</string>
	<string name="noticiasActualizando">Updating Articles...</string>
	<string name="widgetSinConexion">No connection..</string>
	<string name="mainSinElementos">No items to display. Update.</string>
	<string name="itemDisplayerMas">Access to photos, videos and comments on
		dobleembrague.es</string>

	<string name="preferencesTitle">Application</string>
	<string name="preferencesCBTitle">Update at start</string>
	<string name="preferencesCBS">Update articles when open the application</string>
	<string name="preferencesLPTitle">Default Category</string>
	<string name="preferencesLPS">Selected category will be displayed when open the
		application</string>
	<string name="preferencesWList">Default Category</string>
	<string name="preferencesWLS">Selected category will be displayed in the widget
	</string>
	<string name="preferencesWLA">Update</string>
	<string name="preferencesWLAb">Widget refresh rate</string>
</resources>
